--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script type="module" src="/src/main.js"></script>
     <!-- GSI google third party -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <meta name="google-signin-client_id" content="1082013721099-pvgt90o9snnqur6kir30q4ccjqr1889e.apps.googleusercontent.com">
+    <meta
+      name="google-signin-client_id"
+      content="1082013721099-pvgt90o9snnqur6kir30q4ccjqr1889e.apps.googleusercontent.com"
+    />
   </body>
 </html>
