--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <!-- GSI google third party -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <meta name="google-signin-client_id" content="1082013721099-pvgt90o9snnqur6kir30q4ccjqr1889e.apps.googleusercontent.com">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
